cluster/zwave2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwave2mqtt
  namespace: zwave2mqtt
#  annotations:
#    metallb.universe.tf/address-pool: server
#    metallb.universe.tf/allow-shared-ip: zwave2mqtt
spec:
#  externalIPs:
#    - 192.168.42.18
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: websocket
      port: 3030
      targetPort: websocket
  selector:
    io.ebt.service: zwave2mqtt
#    name: zwave2mqtt
#  type: LoadBalancer
#  loadBalancerIP: 192.168.42.18
