cluster/zwave2mqtt/zwave-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zwave2mqtt
  namespace: zwave2mqtt
  labels:
    app: zwave2mqtt
    name: zwave2mqtt
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8091
    protocol: TCP
  selector:
    app.kubernetes.io/name: zwave2mqtt
#    name: zwave2mqtt
