cluster/zwave2mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave2mqtt
spec:
  rules:
    - host: zwave.thomitzek.net
      http:
        paths:
          - backend:
              serviceName: zwave2mqtt
              servicePort: http
