cluster/zwave2mqtt/zwave-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwave2mqtt
  labels:
    app: zwave2mqtt
    name: zwave2mqtt
  namespace: zwave2mqtt
spec:
  rules:
  - host: zwave.thomitzek.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zwave2mqtt
            port: 
              number: 80
    selector:
      app.kubernetes.io/ingres: "true"
